[package]
name = "rollback_kun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["derive"] }
dirs = "5.0.1"
fs_extra = "1.3.0"
requestty = "0.5.0"
serde = "1.0.160"
serde_derive = "1.0.160"
toml = "0.7.3"
